# voice-rtc-bench

./: .env.example  .gitignore  README.md  pyproject.toml
agents/unified-echo/: .env.example  README.md  main.py  pyproject.toml
benchmark-runner/: .env.example  README.md  main.py  pyproject.toml
benchmark-runner/src/: __init__.py  cli.py  echo_agent_client.py  timestream.py  types.py
benchmark-runner/src/runners/: __init__.py  daily.py  livekit.py
benchmark_runner/: .env.example  cli.py  echo_agent_client.py  influxdb.py  main.py  pyproject.toml  stats.py  timestream.py
benchmark_runner/runners/: base.py  daily.py  livekit.py
echo-agent/: .env.example  README.md  api.py  main.py  pyproject.toml
echo_agent/: README.md  api.py  main.py  pyproject.toml
frontend/: .env.example  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.server.json
frontend/server/: index.ts  influxdb-client.ts  timestream-client.ts  validation.ts
frontend/server/routes/: influxdb.ts  timestream.ts
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/components/: LocationModal.tsx  WorldMap.css  WorldMap.tsx
frontend/src/lib/: api-client.ts
shared/: pyproject.toml  settings.py  types.py  utils.py
tests/: README.md  test_influxdb_connection.py
