[tool.uv.workspace]
members = ["benchmark_runner", "echo_agent", "shared"]

[tool.uv.sources]
shared = { workspace = true }

[project]
name = "voice-rtc-bench"
version = "0.1.0"
description = "Voice RTC benchmarking workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
