[tool.uv.workspace]
members = ["benchmark_runner", "echo_agent", "shared"]

[tool.uv.sources]
shared = { workspace = true }
benchmark-runner = { workspace = true }

[project]
name = "voice-rtc-bench"
version = "0.1.0"
description = "Voice RTC benchmarking workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = ["ruff>=0.9.0", "ty"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "C",   # mccabe complexity
    "PGH", # pylint guessing/hinting
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
division-by-zero = "error"
deprecated = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"
