[project]
name = "benchmark-runner"
version = "0.1.0"
description = "Distributed WebRTC latency benchmark runner for Daily and LiveKit"
requires-python = ">=3.11"
dependencies = [
    "daily-python>=0.21.0",
    "livekit>=1.0.19",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",        # AWS SDK for Timestream
]

[project.scripts]
benchmark-runner = "benchmark_runner.src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[dependency-groups]
dev = ["ruff>=0.9.0"]
