[project]
name = "benchmark-runner"
version = "0.1.0"
description = "Distributed WebRTC latency benchmark runner for Daily and LiveKit"
requires-python = ">=3.11"
dependencies = [
    "daily-python>=0.22.0",
    "livekit>=1.0.19",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "influxdb3-python>=0.16.0",  # InfluxDB 3 client
    "pandas>=2.3.3",             # Required by influxdb3-python for data conversion
    "pyarrow>=22.0.0",           # Required by influxdb3-python for Arrow format
    "pipecat-ai>=0.0.95",
    "httpx>=0.28.1",
    "shared",
]

[project.scripts]
benchmark-runner = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[dependency-groups]
dev = ["ruff>=0.9.0"]
