[project]
name = "unified-echo-agent"
version = "0.1.0"
description = "Unified echo agent for both Daily and LiveKit platforms - responds to ping messages for latency benchmarking"
requires-python = ">=3.11"
dependencies = [
    "daily-python>=0.21.0",
    "livekit>=1.0.19",
    "livekit-agents>=1.3.2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents/unified-echo"]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
